--- a/Frontend/src/pages/ForgotPassword.css
+++ b/Frontend/src/pages/ForgotPassword.css
@@ -5,7 +5,7 @@ body {
 }
 
 .SignUp-box {
-    background-color: white;
+    background-color: var(--container-bg);
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,8 +45,8 @@ h3 {
     width: 100%;
     border: none;
     border-radius: 5px;
-    background-color: #516ce5;
-    color: white;
+    background-color: var(--button-bg);
+    color: var(--text);
     font-size: 16px;
     cursor: pointer;
     margin-bottom: 10px;
