--- a/Frontend/src/pages/Login.css
+++ b/Frontend/src/pages/Login.css
@@ -13,7 +13,7 @@ body {
 }
 
 .login-box {
-    background-color: white;
+    background-color: var(--container-bg);
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -25,7 +25,6 @@ body {
     width: 150px; 
     height: 150px;
     margin-bottom: 50px;
-
 }
 
 .logo img {
@@ -51,8 +50,8 @@ body {
     width: 100%;
     border: none;
     border-radius: 5px;
-    background-color: #516ce5;
-    color: white;
+    background-color: var(--button-bg);
+    color: var(--text);
     font-size: 16px;
     cursor: pointer;
     margin-bottom: 10px;
@@ -71,9 +70,9 @@ body {
 }
 
 .additional-options button {
-    background: none;
+    background: var(--button-bg);
     border: none;
-    color: #000000;
+    color: var(--text);
     cursor: pointer;
     font-size: 14px;
 }
