--- a/Frontend/src/pages/SignUp.css
+++ b/Frontend/src/pages/SignUp.css
@@ -47,7 +47,7 @@ h3 {
     border: none;
     border-radius: 5px;
     background-color: #516ce5;
-    color: white;
+    color: rgb(211, 0, 0);
     font-size: 16px;
     cursor: pointer;
     margin-bottom: 10px;
